[project]
name = "p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
